--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="container"></div>
+  <section id="graph">
+    <div id="container"></div>
+  </section>
   <script src="kinetic-v5.1.0.min.js"></script>
   <script src="jquery-2.1.1.min.js"></script>
   <script defer="defer" src="kinetic.js"></script>
