Tidy up folder structure

--- a/semantic-zoom.html
+++ b/semantic-zoom.html
@@ -2,15 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Playing with Canvas</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <title>Document</title>
 </head>
 <body>
+  
   <section id="graph">
     <div id="container"></div>
   </section>
+
+  <h2 id="label">Mousewheel over a shape</h2>
+
+  <button id="scaleUp">Scale up</button>
+  <button id="scaleDown">Scale down</button>
+
+
   <script src="js/lib/kinetic-v5.1.0.min.js"></script>
   <script src="js/lib/jquery-2.1.1.min.js"></script>
-  <script defer="defer" src="js/src/kinetic.js"></script>
+  <script defer="defer" src="js/src/semantic-zoom-kinetic.js"></script>
 </body>
 </html>
