--- a/semantic-zoom.html
+++ b/semantic-zoom.html
@@ -10,7 +10,7 @@
     <div id="container"></div>
   </section>
 
-  <h2 id="label">Mousewheel over a shape</h2>
+  <h2 id="label">Click a button to zoom</h2>
 
   <button id="scaleUp">Scale up</button>
   <button id="scaleDown">Scale down</button>
